--- a/templates/result.html
+++ b/templates/result.html
@@ -6,9 +6,9 @@
 
 {% block main %}
     
-<p>RESULT</p>
+<p>These are the 5 most dominant colors for <b>{{ profile }}</b>!</p>
 
-<body>A
+<body>
 <div id="colorDisplay" class="box-collective">{{ color }}</div>
 </body>
 
@@ -17,6 +17,7 @@
 
     var colorList = document.getElementById('colorDisplay');
 
+    // color function from chatGPT
     colors.forEach(function(color) {
     var colorString = `rgb(${color[0]}, ${color[1]}, ${color[2]})`;
     var hexColor = `#${((1 << 24) + (color[0] << 16) + (color[1] << 8) + color[2]).toString(16).slice(1).toUpperCase()}`;
@@ -27,7 +28,7 @@
     colorDiv.textContent = hexColor; // hex code is the text content inside of div block
 
     colorDiv.addEventListener('click', function() {
-        copyText(colorString);
+        copyText(hexColor);
     })
 
     colorList.appendChild(colorDiv);
@@ -35,11 +36,25 @@
 
 
     // FIX! Commit
-    function copyText() {
+    function copyText(text) {
         navigator.clipboard.writeText(text).then(function() {
-            alert('Copied to clipboard: ' + text);
+            flash('Copied to clipboard: ' + text);
+        }).catch(function(err) {
+            console.error('Failed to copy text', err);
         });
     }
+
+    function flash(message) {
+    var flashMessage = document.createElement('div');
+    flashMessage.textContent = message;
+    flashMessage.className = 'flashMessage';
+    document.body.appendChild(flashMessage);
+
+    setTimeout(function() {
+        flashMessage.remove();
+    }, 2000); // Remove the message after 2 seconds
+}
+
 </script>
 
 
