--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,15 @@
 
 {% block main %}
     <p>
-        Search up a public instagram account to show their profile's color mood!
+        Search up a public instagram account to show their profile's color palette from a specified date range.
     </p>
     <form id="myForm" action ="/redirect" method="post" class="form-inline">
         <div class="form-group mb-3">
-            <input autocomplete="off" autofocus class="form-control form-control-inline" name="profile" placeholder="profile" type="text">
+            <input autocomplete="off" autofocus class="form-control form-control-inline" name="profile" placeholder="profile" value="{{ profile }}" type="text"><br><br>
+            <label for="datefrom">Date from:</label>
+            <input type="date" id="datefrom" name="datefrom" value="{{ datefrom }}"><br><br>
+            <label for="dateto">Date to:</label>
+            <input type="date" id="dateto" name="dateto" value="{{ dateto }}"><br><br>
             <button class="btn btn-primary" type="submit" onclick="submitForm(this);">Search</button>
         </div>
     </form>
