profile picture now displayed on result page

--- a/templates/result.html
+++ b/templates/result.html
@@ -6,6 +6,7 @@
 
 {% block main %}
     
+<img src="{{ pfp_url }}" alt="{{ profile }} profile picture" width="500" height="500">
 <p>These are the 5 most dominant colors for <b>{{ profile }}</b>!</p>
 
 <body>
