--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,12 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/800px-Instagram_icon.png?20200512141346" alt="Instagram Logo" width="65" height="65">
                     InstaColor
                 </h1>
+                <nav>
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
             </div>
         </nav>
         <main class="container py-5 text-center">
